--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -2,12 +2,16 @@
   display: flex;
 
   .homeContainer {
-    flex: 7;
+    flex: 6;
 
-    .widgets {
+    .widgets, .charts {
       display: flex;
       padding: 20px;
       gap: 20px;
+    }
+
+    .charts {
+      padding: 5px 20px;
     }
   }
 }
