--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -14,6 +14,9 @@
       color: #6439ff;
     }
   }
+  .link {
+    text-decoration: none;
+  }
   hr {
     height: 0;
     border: 0.5px solid rgb(228, 226, 226);
